syntax = "proto3";

package citybank;

import "finance.proto";
option go_package = "github.com/joseluis8906/project-layout/internal/citybank/pb";

service AccountService {
    rpc CreateAccount(CreateAccountRequest) returns (CreateAccountResponse);
    rpc CreditAccount(CreditAccountRequest) returns (CreditAccountResponse);
}

message CreateAccountRequest {
    message Owner {
        string id = 1;
        string email = 2;
        string country = 3;
        string full_name = 4;
    }

    string type = 1;
    company.Money balance = 2;
    Owner owner = 3;
}

message CreateAccountResponse {
    string number = 1;
}

message CreditAccountRequest {
    string type = 1;
    string number = 2;
    company.Money amount = 3;
}

message CreditAccountResponse {}
